Fixed mis aligned div in bits view template

--- a/css/style.css
+++ b/css/style.css
@@ -586,7 +586,7 @@ a.tw-twitter:hover{
 .footer-links a{
 	text-decoration: none;
 	color: #000;
-	font-weight:500;
+	font-weight:bold;
 }
 .footer-links a:hover{
 	text-decoration: underline;
